Refactoring. Fixing warnings.